@@ -184,9 +184,7 @@
 
 <H2 ID="CMDOPTDJGPP">    Option -djgpp: Select Output Format for DJGPP (optional) </H2>
 
-    Option -djgpp selects Djgpp's variant of COFF as output format. Since it is
-    rarely used nowadays, this option isn't activated in the precompiled
-    binaries. See <A HREF="#CHAPOPTFEAT">Optional Features</A> how to enable it.
+    Option -djgpp selects Djgpp's variant of COFF as output format.
 <P>
     Chapter <A HREF="#CHAPOUTPUTFORMATS">Output Formats</A> lists all available output formats.
 
@@ -1354,7 +1352,7 @@ size_myarray equ $ - myarray
 <TR BGCOLOR="#E8E8E8"><TD><A HREF="#CMDOPTELF">-elf</A></TD><TD>32-Bit ELF ("Executable and Linkable Format") object modules.</TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD><A HREF="#CMDOPTELF64">-elf64</A></TD><TD>64-bit ELF object modules.</TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD><A HREF="#OUTPUTFORMATWIN64">-win64</A></TD><TD>64-bit format for Win64 object modules. COFF variant with 64-bit extensions.</TD></TR>
-<TR BGCOLOR="#E8E8E8"><TD><A HREF="#CMDOPTDJGPP">-djgpp</A></TD><TD>COFF variant used by DJGPP. Not active in precompiled binaries.</TD></TR>
+<TR BGCOLOR="#E8E8E8"><TD><A HREF="#CMDOPTDJGPP">-djgpp</A></TD><TD>COFF variant used by DJGPP.</TD></TR>
 <TR BGCOLOR="#D8D8D8"><TD><A HREF="#OUTPUTFORMATBIN">-bin</A></TD><TD>raw binary format.</TD></TR>
 <TR BGCOLOR="#D8D8D8"><TD><A HREF="#CMDOPTMZ">-mz</A></TD><TD>DOS MZ binary format.</TD></TR>
 <TR BGCOLOR="#D8D8D8"><TD><A HREF="#OUTPUTFORMATPE">-pe</A></TD><TD>32- and 64-bit PE binaries.</TD></TR>
@@ -1749,11 +1747,6 @@ _DATA                           C      10C        12        12
   precompiled binaries. To enable these options, the JWasm source must be
   recompiled with one or more switches set in the command line:
 
-<H2>    Support for Djgpp's variant of COFF</H2>
-  This option is enabled with switch <b>-DDJGPP_SUPPORT</b>. The generated JWasm
-  binary will accept an additional output format (-djgpp) to be set in the
-  commandline, that makes the assembler generate COFF modules compatible with DJGPP.
-  
 <H2>    Support for Assembly Source generated by Intel C++ compiler</H2>
   This option is enabled with switch <b>-DDOTNAMEX</b>. It will make the
   assembler accept names that contain dots if the name starts with a dot
